Fix Sonar bugs